First basic route working, with a test id an XML file is loaded and returned
